Undo wrapping + ensure Fragment Mono font.

--- a/styles.css
+++ b/styles.css
@@ -10,33 +10,35 @@ h1 {
     color: #F4F4F4;
     font-family: 'Kozuka Gothic Pr6N', 'Montserrat', 'Mplus 1p', 'Hiragino Sans', 'Hiragino Kaku Gothic Pro', '游ゴシック', '游ゴシック体', 'YuGothic', 'Yu Gothic', 'ＭＳ ゴシック', 'MS Gothic', sans-serif;
     font-weight: 100;
-    font-size: 58px;
+    font-size: clamp(28px, 17vw, 100px);
     line-height: 12px;
+    white-space: nowrap;
 }
 
 h2 {
     color: #F4F4F4;
-    font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
-    font-size: 35px;
+    font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
     font-weight: 500;
+    font-size: clamp(14px, 9vw, 54px);
+    white-space: nowrap;
 }
 
 p {
     color: #F4F4F4;
-    font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+    font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
     font-size: 14px;
 }
 
 .text {
     color: #F4F4F4;
-    font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+    font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
     font-size: 14px;
     text-align: justify;
 }
 
     .text::after {
         color: #F4F4F4;
-        font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+        font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
         font-size: 14px;
         text-align: justify;
         content: '';
@@ -46,7 +48,7 @@ p {
 
     .text:last-child::after {
         color: #F4F4F4;
-        font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+        font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
         font-size: 14px;
         text-align: justify;
         content: none;
@@ -91,21 +93,21 @@ p {
 /* Style for regular links */
 a {
     color: #F4F4F4;
-    font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+    font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
     font-size: 14px;
     text-decoration: underline;
 }
 
     a:hover {
         color: #F4F4F4;
-        font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+        font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
         font-size: 14px;
         text-decoration: none; /* Remove underline */
     }
 
     a:visited {
         color: #F4F4F4;
-        font-family: 'Input Mono', 'Berkeley Mono', 'Fragment Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+        font-family: 'Fragment Mono', 'Input Mono', 'Berkeley Mono', 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Courier New', monospace;
         font-size: 14px;
     }
 
